<resources>
    <string name="app_name">My Weather App</string>

    <string name="slide_icon">Slide Icon</string>
    <string name="slide_heading">Slide Heading</string>
    <string name="slide_desc">slide Description</string>
    <string name="description">Description</string>
    <string name="percent_humidity">00.0</string>
    <string name="sunrie_sunset">Sunrise/Sunset</string>
    <string name="celsius">Celsius</string>
    <string name="city">City</string>
    <string name="last_updated">Last Updated:</string>
    <string name="todo">TODO</string>
</resources>
