<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/slide_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/slide_icon"
        app:srcCompat="@drawable/ic_marker" />

    <TextView
        android:id="@+id/slide_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:contentDescription="@string/slide_heading"
        android:text="@string/slide_heading"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/slide_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:contentDescription="@string/slide_desc"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/slide_desc"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="normal|italic" />
</RelativeLayout>