<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorBackgroundMain"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/sr"
        android:layout_width="match_parent"
        android:layout_height="320dp">

        <LinearLayout
            android:id="@+id/linearLayoutUp"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/txtCelsius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/celsius"
                android:textColor="@color/ColorBlackGrey"
                android:textSize="55sp"
                android:textStyle="normal"
                android:typeface="normal" />

            <TextView
                android:id="@+id/txtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/city"
                android:textColor="@color/ColorBlackGrey"
                android:textSize="28sp"
                android:textStyle="normal"
                android:typeface="sans" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-4dp"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="@color/ColorBlackGrey"
                android:textSize="23sp"
                android:textStyle="normal" />

        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDown"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:background="@drawable/card_layout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtHumidity"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="11dp"
                    android:gravity="top|center_horizontal"
                    android:text="@string/percent_humidity"
                    android:textColor="@color/ColorLightBlue"
                    android:textSize="27sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/humidity" />
            </LinearLayout>

            <View
                android:layout_width="29dp"
                android:layout_height="159dp"
                android:layout_gravity="top|center"
                android:layout_weight="1"
                android:background="#a40404" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/sunrise" />

                <TextView
                    android:id="@+id/txtTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:text="@string/sunrie_sunset"
                    android:textColor="@color/ColorBlackGrey"
                    android:textSize="26dp"
                    android:textStyle="normal|italic" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/sunset" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>